Fix text overflow in VirtualList on iOS devices

--- a/styles/web/common/virtuallist.less
+++ b/styles/web/common/virtuallist.less
@@ -44,6 +44,7 @@
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .k-popup .k-list .k-item > .k-group,
